--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=administrasi_mandiri
+application.vendor=Naufal Charis
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,32 @@ dist.jar=${dist.dir}/administrasi_mandiri.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/administrasi_mandiri
+endorsed.classpath=
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Naufal Charis\\Downloads\\commons-logging-1.2.jar
+file.reference.fontbox-2.0.27.jar=C:\\Users\\Naufal Charis\\Downloads\\fontbox-2.0.27.jar
+file.reference.graphics2d-0.29.jar=C:\\Users\\Naufal Charis\\Downloads\\graphics2d-0.29.jar
+file.reference.graphics2d-0.40.jar=C:\\Users\\Naufal Charis\\Downloads\\graphics2d-0.40.jar
 file.reference.mysql-connector-j-9.3.0.jar=lib\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
+file.reference.openhtmltopdf-core-1.0.10.jar=C:\\Users\\Naufal Charis\\Downloads\\openhtmltopdf-core-1.0.10.jar
+file.reference.openhtmltopdf-pdfbox-1.0.10.jar=C:\\Users\\Naufal Charis\\Downloads\\openhtmltopdf-pdfbox-1.0.10.jar
+file.reference.pdfbox-2.0.27.jar=C:\\Users\\Naufal Charis\\Downloads\\pdfbox-2.0.27.jar
 file.reference.Template.jar=C:\\Users\\hp\\Documents\\NetBeansProjects\\Template\\dist\\Template.jar
+file.reference.xmpbox-2.0.27.jar=C:\\Users\\Naufal Charis\\Downloads\\xmpbox-2.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Template.jar}:\
     ${libs.Jasper_Report.classpath}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.openhtmltopdf-core-1.0.10.jar}:\
+    ${file.reference.openhtmltopdf-pdfbox-1.0.10.jar}:\
+    ${file.reference.pdfbox-2.0.27.jar}:\
+    ${file.reference.xmpbox-2.0.27.jar}:\
+    ${file.reference.fontbox-2.0.27.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.graphics2d-0.40.jar}:\
+    ${file.reference.graphics2d-0.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
